objects/Agent_Service__e/Agent_Service__e.object-meta.xml
<CustomObject>
    <label>Agent Service</label>
    <pluralLabel>Agent Services</pluralLabel>
</CustomObject>