objects/Agent_Service__e/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>MailingCity</label>
    <length>70</length>
    <type>Text</type>
</CustomField>