objects/Agent_Service__e/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <label>MailingCountry</label>
    <length>70</length>
    <type>Text</type>
</CustomField>