objects/Agent_Service__e/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>