objects/Agent_Service__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>11</length>
    <type>Text</type>
</CustomField>